Archive2/f0/ab71d9ed699a65/output
main.cpp:2:5: warning: missing terminating " character [enabled by default]
 asm("movl $1,%%eax;
     ^
main.cpp:2:1: error: missing terminating " character
 asm("movl $1,%%eax;
 ^
main.cpp:4:16: warning: missing terminating " character [enabled by default]
      int  $0x80"
                ^
main.cpp:4:6: error: missing terminating " character
      int  $0x80"
      ^
main.cpp:3:6: error: expected string-literal before 'xorl'
      xorl %%ebx,%%ebx;
      ^
main.cpp:3:22: warning: extra ';' [-Wpedantic]
      xorl %%ebx,%%ebx;
                      ^
main.cpp:5:5: error: expected initializer before ')' token
     );
     ^
